// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`English render 1`] = `
<div>
  <div
    class="linkOuterWrapper "
  >
    <a
      data-testid="v2/en/test_atlas"
      href="/v2/en/test_atlas"
    >
      <div
        class="linkInnerWrapper"
      >
        <div
          class="linkImageWrapper"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="linkText"
        >
          <div
            class="linkDateContainer "
          >
            <div
              class="outerCircle"
            >
              <div
                class="innerDot"
              />
            </div>
            Published 
            <strong
              class="date"
            >
              October 13 2014
            </strong>
          </div>
          <div
            class="linkTitle"
          >
            Testatlas 2
          </div>
          <div
            class="linkIngress"
          >
            <p>
              Lorem lipsum dolor 2
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <div
    class="linkOuterWrapper "
  >
    <a
      data-testid="v2/test_atlas"
      href="/v2/test_atlas"
    >
      <div
        class="linkInnerWrapper"
      >
        <div
          class="linkImageWrapper"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="linkText"
        >
          <div
            class="linkDateContainer "
          >
            <div
              class="outerCircle"
            >
              <div
                class="innerDot"
              />
            </div>
            Publisert:
            <strong
              class="date"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="linkTitle"
          >
            Testatlas 1
          </div>
          <div
            class="linkIngress"
          >
            <p>
              Lorem lipsum dolor 1
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`Wide is true 1`] = `
<div>
  <div
    class="linkOuterWrapper wide"
  >
    <a
      data-testid=""
      href="/"
    >
      <div
        class="linkInnerWrapper"
      >
        <div
          class="linkImageWrapper"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="linkText"
        >
          <div
            class="linkDateContainer "
          >
            <div
              class="outerCircle"
            >
              <div
                class="innerDot"
              />
            </div>
            Publisert:
            <strong
              class="date"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="linkTitle"
          />
          <div
            class="linkIngress"
          >
            <p />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`newlyUpdated is true 1`] = `
<div>
  <div
    class="linkOuterWrapper "
  >
    <a
      data-testid=""
      href="/"
    >
      <div
        class="linkInnerWrapper"
      >
        <div
          class="linkImageWrapper"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%271160%27%20height=%27740%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="atlas photo"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="linkText"
        >
          <div
            class="linkDateContainer newlyUpdated"
          >
            <div
              class="outerCircle"
            >
              <div
                class="innerDot"
              />
            </div>
            Publisert:
            <strong
              class="date"
            >
              13.10.2014
            </strong>
          </div>
          <div
            class="linkTitle"
          />
          <div
            class="linkIngress"
          >
            <p />
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;
